--- a/Json to CSV code.ipynb
+++ b/Json to CSV code.ipynb
@@ -68,7 +68,7 @@
    ],
    "source": [
     "# Create a CSV file for writing\n",
-    "csv_file_path = \"formatted_data.csv\"\n",
+    "csv_file_path = \"formatted_data_updated.csv\"\n",
     "\n",
     "# Create a list to store the formatted data\n",
     "formatted_data = []\n",
@@ -77,7 +77,7 @@
     "for item in json_data[\"list\"]:\n",
     "    timestamp = item[\"dt\"]\n",
     "    date_obj = datetime.utcfromtimestamp(timestamp)\n",
-    "    formatted_date = date_obj.strftime(\"%m/%d/%Y\")\n",
+    "    formatted_date = date_obj.strftime(\"%Y-%m-%d %H:%M:%S\")\n",
     "    \n",
     "    # Create a new dictionary to hold the formatted data\n",
     "    formatted_item = {\"Date\": formatted_date, \"aqi\": item[\"main\"][\"aqi\"]}\n",
