--- a/Json to CSV code.ipynb
+++ b/Json to CSV code.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://api.openweathermap.org/data/2.5/air_pollution/history?lat=58.49&lon=119.39&start=1641013200&end=1693540799&appid=7c04c17af3552565c3938865b59d1e9f'    "
+    "url = 'http://api.openweathermap.org/data/2.5/air_pollution/history?lat=58.49&lon=-119.39&start=1641013200&end=1693540799&appid=7c04c17af3552565c3938865b59d1e9f'    "
    ]
   },
   {
@@ -62,13 +62,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formatted data has been saved to formatted_data_updated.csv\n"
+      "Formatted data has been saved to formatted_data_FINAL.csv\n"
      ]
     }
    ],
    "source": [
     "# Create a CSV file for writing\n",
-    "csv_file_path = \"formatted_data_updated.csv\"\n",
+    "csv_file_path = \"formatted_data_FINAL.csv\"\n",
     "\n",
     "# Create a list to store the formatted data\n",
     "formatted_data = []\n",
